--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.0.0",
         "@rollup/plugin-typescript": "^8.2.1",
+        "@tauri-apps/cli": "^1.0.0-beta.10",
         "@tsconfig/svelte": "^2.0.1",
         "autoprefixer": "^10.2.6",
         "postcss": "^8.3.2",
@@ -33,11 +34,16 @@
         "sirv-cli": "^1.0.11",
         "svelte": "^3.38.2",
         "svelte-check": "^2.1.0",
+        "svelte-css-vars": "^0.0.3",
         "svelte-loading-spinners": "^0.1.5",
+        "svelte-navigator": "^3.1.5",
         "svelte-preprocess": "^4.7.3",
         "svelte-preprocess-postcss": "^1.1.1",
         "ts-loader": "^9.2.3",
         "tslib": "^2.2.0",
         "typescript": "^4.3.2"
-}    
+    },
+    "dependencies": {
+        "@tauri-apps/api": "^1.0.0-beta.8"
+    }
 }
