--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "build": "rollup -c",
         "dev": "rollup -c -w",
-        "start": "sirv wwwroot",
-        "check": "svelte-check"
+        "start": "sirv wwwroot"
     },
     "devDependencies": {
         "@popperjs/core": "^2.9.2",
@@ -18,27 +17,15 @@
         "@rollup/plugin-typescript": "^8.2.1",
         "@tauri-apps/cli": "^1.0.0-beta.10",
         "@tsconfig/svelte": "^2.0.1",
-        "autoprefixer": "^10.2.6",
-        "postcss": "^8.3.2",
-        "postcss-normalize": "^10.0.0",
-        "postcss-scrollbar": "^0.3.0",
         "rollup": "^2.51.1",
         "rollup-plugin-delete": "^2.0.0",
-        "rollup-plugin-livereload": "^2.0.0",
         "rollup-plugin-node-globals": "^1.4.0",
-        "rollup-plugin-postcss": "^4.0.0",
         "rollup-plugin-svelte": "^7.1.0",
         "rollup-plugin-terser": "^7.0.2",
-        "sass": "^1.34.1",
         "sirv": "^1.0.11",
         "sirv-cli": "^1.0.11",
         "svelte": "^3.38.2",
-        "svelte-check": "^2.1.0",
-        "svelte-css-vars": "^0.0.3",
         "svelte-loading-spinners": "^0.1.5",
-        "svelte-navigator": "^3.1.5",
-        "svelte-preprocess": "^4.7.3",
-        "svelte-preprocess-postcss": "^1.1.1",
         "ts-loader": "^9.2.3",
         "tslib": "^2.2.0",
         "typescript": "^4.3.2"
